                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 29-05-2005 changed: simplified vorbisfile.dll handling
 - 29-05-2005 fixed: ogg and flac files could not be started from the database view after rescan
 - 29-05-2005 fixed: audioscrobbler submits only the first song when using PAPlayer v2
 - 29-05-2005 added: support for ogg bitstreams aka chapters (vorbisfile.dll got updated)
 - 28-05-2005 added: SF patch [ 1203847 ] New info tags for musicplayer, thanks to desertbear
                     new info item are: MusicPlayer.PlaylistPosition, MusicPlayer.PlaylistLength, MusicPlayer.Codec
                     MusicPlayer.Bitrate (kbps), MusicPlayer.BitsPerSample, MusicPlayer.Channels, MusicPlayer.SampleRate (kHz)
 - 28-05-2005 fixed: SMB Share Controll, when set to Normal User, the default share place should be all [GeminiServer]
 - 27-05-2005 updated: Korean language file (Thnx to AkoXko)
 - 27-05-2005 updated: German language file
 - 27-05-2005 updated: Italian language file (Thnx to kotix)
 - 27-05-2005 updated: Norwegian language file (Thnx to vnm)
 - 27-05-2005 updated: French language file (Thnx to modhack)
 - 27-05-2005 updated: Polish language file (Thnx to napek)
 - 27-05-2005 fixed: shoutcast playlists were broken
 - 27-05-2005 fixed: different info tags are not shown when file has no tag
 - 27-05-2005 fixed: g_applicationMessenger.PictureShow - browser interface would not display single picture
 - 27-05-2005 added: SMB Share control within the GUI! [GeminiServer]
                     This will  make it easy to set the SMB share, instead of XboxMediaCenter.xml editing to set the <samba> settings.