@@ -5,6 +5,8 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 30-05-2005 reverted: aspectratio change in dvdplayer (original solution was much better) + added aspectratio override from dvd ifo files.
+ - 30-05-2005 fixed: some frames where missed when navigating in dvd menus. (only partial fix, still problems)
  - 29-05-2005 changed: simplified vorbisfile.dll handling
  - 29-05-2005 fixed: ogg and flac files could not be started from the database view after rescan
  - 29-05-2005 fixed: audioscrobbler submits only the first song when using PAPlayer v2
